// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-khrHlC hjwdTv"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-khrHlC hjwdTv"
  >
    Default color is Bulma
  </p>
  <p
    className="sc-khrHlC gOQRbO"
    color="piccolo.100"
  >
    Piccolo
  </p>
  <p
    className="sc-khrHlC fbNKHU"
    color="trunks.100"
  >
    Trunks
  </p>
  <p
    className="sc-khrHlC deYhyG"
    color="krillin.100"
  >
    Krillin
  </p>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-khrHlC hjwdTv"
  >
    Default font-weight is regular
  </p>
  <p
    className="sc-khrHlC bYaFCJ"
  >
    Font-weight is bold
  </p>
</div>
`;

exports[`Caption renders line height 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-khrHlC hjwdTv"
  >
    Line-height is pre-calculated
  </p>
  <p
    className="sc-khrHlC bWNgHi"
  >
    Custon line-height
  </p>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-khrHlC hjwdTv"
  >
    Paragraph is a default tag
  </p>
  <span
    className="sc-khrHlC hjwdTv"
  >
    Span tag
  </span>
  <label
    className="sc-khrHlC hjwdTv"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-khrHlC hjwdTv"
  >
    Default font-size is 16px
  </p>
  <p
    className="sc-khrHlC dyxaKA"
    size={24}
  >
    Size is 24px
  </p>
  <p
    className="sc-khrHlC dXbzlg"
    size={48}
  >
    Size is 48px
  </p>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-khrHlC hjwdTv"
  >
    Text-align is not specified
  </p>
  <p
    className="sc-khrHlC jCnJiU"
  >
    Centered Text
  </p>
  <p
    className="sc-khrHlC jZUoED"
  >
    Right alignment
  </p>
</div>
`;

exports[`Caption renders underline 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-khrHlC hjwdTv"
  >
    Default text-decoration is none
  </p>
  <p
    className="sc-khrHlC cLIWNW"
  >
    Underline Text
  </p>
</div>
`;

exports[`Caption renders uppercase 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-khrHlC hjwdTv"
  >
    Default text-transform is none
  </p>
  <p
    className="sc-khrHlC jnsDOs"
  >
    Uppercase Text
  </p>
</div>
`;
